--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
@@ -432,7 +432,7 @@
                 }
                 .icon {
                     width: 28px;
-                    height: 28x;
+                    height: 28px;
                     margin-right: 12px;
                     img {
                         max-height: 28px;
@@ -558,6 +558,11 @@
       width: calc(100% - 50px);
       margin: 0 auto;
       position: relative;
+      .statistic-item {
+        width: auto;
+        margin: 0 4px;
+        outline: none;
+      }
       button{
         background-color: transparent;
         border: block;
@@ -594,12 +599,7 @@
         }
       }
     }
-    .statistic-item {
-      width: auto;
 
-      margin: 0 4px;
-      outline: none;
-    }
 
     .graphics{
       order: 1;
@@ -618,5 +618,85 @@
       width: calc(50% - 8px);
     }
 
+  }
+}
+
+@media (max-width: 767px) {
+  .statistic{
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0 15px;
+    overflow-x: hidden;
+    .compressed-statistic{
+      .slick-list{
+        width: 100%;
+      }
+      .statistic-item{
+        width: auto;
+        min-height: auto;
+        max-height: auto;
+        border: 1px solid rgb(235, 238, 255);
+        box-shadow: none;
+        padding: 14px 13px;
+        border-radius: 10px;
+        p.title{
+          font-size: 14px;
+        }
+        p.value{
+          font-size: 16px;
+        }
+        .icon {
+          width: 25px;
+          height: 25px;
+          img {
+              max-height: 25px;
+          }
+      }
+      }
+    }
+    .wallet{
+      order: 0;
+      width: 100%;
+      &-section{
+        max-height: none;
+        box-shadow: 0px 3px 21px rgba(128, 152, 213, 0.15);
+        border-radius: 4px;
+      }
+      .form{
+        .cash-form{
+          p{
+            font-variant: initial;
+            font-size: 12px;
+            text-transform: uppercase;
+          }
+        }
+        .operation-type{
+          border: 1px solid rgba(220, 224, 230, 0.1);
+          box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+          border-radius: 3px;
+          display: flex;
+          align-items: center;
+          padding: 0 10px;
+        }
+      }
+    }
+    .calendar-wrap{
+      order: 1;
+      width: 100%;
+    }
+    .graphics{
+      order: 2;
+      width: auto;
+      margin: 10px -15px 0;
+      overflow: hidden;
+      overflow-x: scroll;
+      max-height: initial;
+      &::-webkit-scrollbar {  height: 10px;}
+
+      .graphic{
+        padding-bottom: 10px;
+        width: auto;
+      }
+    }
   }
 }
