--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/birthday-user-settings/birthday-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/birthday-user-settings/birthday-user-settings.component.scss
@@ -94,7 +94,7 @@
     & > div{
       height: auto;
       margin-right: 5px;
-      min-width: 80px;
+      width: 33%;
       max-width: 100px;
       &.month {
         min-width: 110px;
