--- a/src/app/chat/components/collocutors-list/collocutor-list.component.html
+++ b/src/app/chat/components/collocutors-list/collocutor-list.component.html
@@ -31,15 +31,15 @@
                         </div>
                         <div class="message-information">
                             <p class="collocutor-name">{{ collocutor.collocutorName }} {{ collocutor.collocutorSurname }} </p>
-                            <p class="collocutor-message" *ngIf="collocutors[i].message && chatType !== 'work'">
+                            <p class="collocutor-message" *ngIf="collocutors[i].message.length !== 0 && chatType !== 'work'">
                                 <span *ngIf="userId == collocutor.message[0].author">Вы: </span>
                                 <span *ngIf="collocutor.message[0].type === 'string'">{{ collocutor.message[0].message }}</span>
                                 <span *ngIf="collocutor.message[0].type === 'file'">{{'general.file' | translate}}</span>
                             </p>
                             <p *ngIf="chatType == 'work'"> {{ collocutor.offers_title }}</p>
                         </div>
-                    </div> 
-                    
+                    </div>
+
                 </div>
             </ng-container>
         </div>
