--- a/src/app/chat/components/message-list/message-list.component.html
+++ b/src/app/chat/components/message-list/message-list.component.html
@@ -16,7 +16,7 @@
 
             <!-- /brief -->
             <!-- message -->
-            <div class="message" *ngIf="message.type !== 'brief'" [ngClass]="{ 'author': message.author === userId, 'message-anchor': i === 0 || messagesList[i].author !== messagesList[i-1].author}">
+            <div class="message" *ngIf="message.type !== 'brief'" [ngClass]="{ 'author': message.author == userId, 'message-anchor': i === 0 || messagesList[i].author !== messagesList[i-1].author}">
                 <div class="photo">
                     <ng-container *ngIf="i === 0 || i== messagesList.length-1 || messagesList[i].author !== messagesList[i+1].author">
                         <a [routerLink]="'/user/' + message.author | localize"><img *ngIf="message.author === userId" [src]="userAvatar" alt="avatar"></a>
@@ -46,9 +46,10 @@
             <!--/ message -->
 
         </div>
-        <div class="message typing" *ngIf="typing && typingUser === +userId">
+        <div class="message typing" *ngIf="typing && typingUser !== +userId">
             <div class="photo">
                 <img [src]="collocutorData.collocutorAva" alt="avatar">
+                {{ typingUser }}
             </div>
             <div class="text">
                 <span></span>
