--- a/src/app/chat/components/collocutor-information/collocutor-information.component.scss
+++ b/src/app/chat/components/collocutor-information/collocutor-information.component.scss
@@ -2,6 +2,9 @@
     box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
     padding-bottom: 30px;
     box-sizing: border-box;
+    .toggleCollocutoInfo{
+      display: none;
+    }
     div.line {
         width: 100%;
         border-radius: 4px;
@@ -154,4 +157,11 @@
             transform: rotate(135deg) translateY(20%);
         }
     }
+}
+
+@media (max-width: 1024px) {
+  .collocutor-wrap{
+    height: 95%;
+
+  }
 }
