hide not working functional

--- a/src/app/home-page/home-page-questions/home-page-questions.component.html
+++ b/src/app/home-page/home-page-questions/home-page-questions.component.html
@@ -7,7 +7,7 @@
                 <p>{{'home-page.guestion-text' | translate}}</p>
                 <p>{{'home-page.guestion-text2' | translate}}</p>
             </div>
-            <a class="btn outline">{{'home-page.guestion-btn' | translate}}</a>
+            <!-- <a class="btn outline">{{'home-page.guestion-btn' | translate}}</a> -->
         </div>
     </div>
     <div class="guestion-tabs">
