--- a/src/app/shared/modules/footer/footer.component.html
+++ b/src/app/shared/modules/footer/footer.component.html
@@ -6,7 +6,7 @@
                 <h4>gigrum</h4>
                 <p>{{'footer.text' | translate}}</p>
             </div>
-            <ul class="column">
+            <ul class="column categories">
                 <li class="column-title">{{'footer.list-title1' | translate}}</li>
                 <li class="column-item"><a [routerLink]="['/catalog', 'Design-Art'] | localize">{{'home-page.specialist-item1' | translate}} </a></li>
                 <li class="column-item"><a [routerLink]="['/catalog', 'Webprogramming'] | localize">{{'home-page.specialist-item2' | translate}} </a></li>
@@ -15,7 +15,7 @@
                 <li class="column-item"><a [routerLink]="['/catalog', 'Marketing'] | localize">{{'home-page.specialist-item5' | translate}} </a></li>
                 <li class="column-item"><a [routerLink]="['/catalog', 'Audio-Video'] | localize">{{'home-page.specialist-item6' | translate}} </a></li>
             </ul>
-            <ul class="column">
+            <!-- <ul class="column">
                 <li class="column-title">{{'footer.list-title2' | translate}}</li>
                 <li class="column-item"><a>{{'footer.list2-item1' | translate}} </a></li>
                 <li class="column-item"><a>{{'footer.list2-item2' | translate}} </a></li>
@@ -28,7 +28,7 @@
                 <li class="column-item"><a>{{'header.how_it_works' | translate}} </a></li>
                 <li class="column-item"><a>{{'footer.list2-item1' | translate}} </a></li>
                 <li class="column-item"><a>{{'footer.blog' | translate}} </a></li>
-            </ul>
+            </ul> -->
         </div>
         <div class="copyright">
             <span>{{'footer.copyright' | translate}}</span>
