--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -39,7 +39,7 @@
 
             <nav *ngIf="pageName !== 'authoriz'">
                 <a [routerLink]="'/' | localize">{{'menu.home' | translate}}</a>
-                <a [routerLink]="'/' | localize">{{'header.how_it_works' | translate}}</a>
+                <!-- <a [routerLink]="'/' | localize">{{'header.how_it_works' | translate}}</a> -->
                 <a [routerLink]="['/catalog'] | localize">{{'menu.catalog' | translate}}</a>
                 <!-- <a [routerLink]="'' | localize">{{'menu.projects' | translate}}</a> -->
             </nav>
