--- a/src/app/shared/modules/footer/footer.component.scss
+++ b/src/app/shared/modules/footer/footer.component.scss
@@ -1,7 +1,9 @@
 .footer{
     // background: linear-gradient(180deg, #F6FAFF 0%, rgba(250, 251, 251, 0.0001) 100%);
     width: 100%;
-    height: 460px;
+    // height: 460px;
+    height: 290px;
+
     position: relative;
     overflow: hidden;
     background-color: transparent;
@@ -86,20 +88,30 @@
         h4{
           width: 170px;
           text-align: left;
-      
+
           font-weight: bold;
           font-size: 24px;
           line-height: 24px;
           color: #FFFFFF;
-          margin: 35px 0 14px;
+          // margin: 35px 0 14px;
+          margin: 0px 0 25px;
         }
         p{
           width: 170px;
-          text-align: left;    
+          text-align: left;
           font-size: 13px;
           line-height: 113.2%;
           color: #C3DAFA;
           margin: 0;
+        }
+      }
+      &.categories{
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+        .column-title{
+          width: 100%;
         }
       }
     }
@@ -131,7 +143,8 @@
       margin: 0 auto;
     }
     .footer{
-      height: 400px;
+      // height: 400px;
+      height: 240px;
       &::after{
         width: 35%;
         height: 100%;
@@ -155,6 +168,9 @@
         &-item{
           font-size: 14px;
           line-height: 18px;
+        }
+        &.column-info{
+          margin-right: 15px;
         }
       }
       .copyright{
@@ -186,7 +202,7 @@
 
   @media (max-width: 1199.98px) {
     .footer{
-      height: 330px;
+      // height: 330px;
       &::after{
         width: 35%;
         height: 100%;
@@ -224,6 +240,12 @@
           }
           &:nth-child(4){
             width: 14%;
+          }
+          &.categories{
+            justify-content: flex-start;
+            li{
+              margin-right: 15px;
+            }
           }
         }
       }
@@ -267,7 +289,7 @@
       }
       .wrapper{
         padding: 0 35px;
-  
+
       }
       .columns-list{
         flex-direction: column;
@@ -285,7 +307,7 @@
           font-size: 14px;
           line-height: 18px;
         }
-  
+
         &.column-info{
           width: 100%;
           order: 4;
@@ -294,10 +316,10 @@
           h4, p{
             text-align: center;
             margin-top: 0;
-  
+
           }
         }
-  
+
       }
       .copyright{
         font-size: 13px;
