pravki + user page tablet adapt

--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -4,7 +4,7 @@
   <div class="bread-crumbs">
     <ul *ngIf="catalogFilters.subCategory && offersList">
       <li><a [routerLink]="['/'] | localize">Главная</a></li>
-      <li><a [routerLink]="['/' + 'catalog/' + category] | localize">{{ category }}</a></li>
+      <li><a [routerLink]="['/' + 'catalog/' + category] | localize">{{ offersList['category_' + currentLang] }}</a></li>
       <li><a>{{ offersList['name_' + currentLang] }}</a></li>
 
     </ul>
