--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -175,8 +175,8 @@ h1 {
 
 .app-news{
   background: #3C7DEA;
-  padding: 90px 0 100px;
-  overflow-x: hidden;
+  // padding: 90px 0 100px;
+  // overflow-x: hidden;
 }
 .support{
   z-index: 9;
