--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
@@ -26,7 +26,7 @@
             </div>
           </div>
 
-          <div class="toggle_block" [ngClass]="{ hidden: openItem !== i+1 }">
+          <div class="toggle_block" [ngClass]="{ hidden: openItem !== i+1 && !closeAfterSaveSettings || closeAfterSaveSettings }">
             <div class="field-block">
               <h5 class="fields-title">{{'user-settings.course-name' | translate}}</h5>
               <input
