--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <nav *ngIf="pageName !== 'authoriz'">
-                    <a [routerLink]="'/' | localize">{{'header.how_it_works' | translate}}</a>
+                    <!-- <a [routerLink]="'/' | localize">{{'header.how_it_works' | translate}}</a> -->
                     <a [routerLink]="['/catalog'] | localize">{{'menu.catalog' | translate}}</a>
                     <!-- <a [routerLink]="''">Проэкты</a> -->
                 </nav>
