--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -378,7 +378,7 @@
       font-size: 18px;
       line-height: 23px;
       color: #323C47;
-      margin: 20px 0;
+      margin: 0 0 0 20px;
     }
 
     .offers-views {
